[package]
name = "abc339"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc339-a = { alias = "a", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_a" }
abc339-b = { alias = "b", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_b" }
abc339-c = { alias = "c", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_c" }
abc339-d = { alias = "d", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_d" }
abc339-e = { alias = "e", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_e" }
abc339-f = { alias = "f", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_f" }
abc339-g = { alias = "g", problem = "https://atcoder.jp/contests/abc339/tasks/abc339_g" }

[[bin]]
name = "abc339-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc339-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc339-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc339-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc339-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc339-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc339-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.5"

[dev-dependencies]
