[package]
name = "abc347"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc347-a = { alias = "a", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_a" }
abc347-b = { alias = "b", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_b" }
abc347-c = { alias = "c", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_c" }
abc347-d = { alias = "d", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_d" }
abc347-e = { alias = "e", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_e" }
abc347-f = { alias = "f", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_f" }
abc347-g = { alias = "g", problem = "https://atcoder.jp/contests/abc347/tasks/abc347_g" }

[[bin]]
name = "abc347-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc347-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc347-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc347-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc347-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc347-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc347-g"
path = "src/bin/g.rs"

[dependencies]
proconio = "0.4.5"

[dev-dependencies]
